--- a/index.html
+++ b/index.html
@@ -4,216 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPWLA Argentina Student Chapter</title>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <style>
-        :root {
-            --primary: #002D5A; /* Azul SPWLA oficial */
-            --secondary: #0056b3;
-            --accent: #00d4ff;
-            --light: #f8f9fa;
-            --dark: #1a1a1a;
-            --white: #ffffff;
-        }
-
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-
-        body {
-            font-family: 'Open Sans', sans-serif;
-            background-color: var(--light);
-            color: var(--dark);
-            scroll-behavior: smooth;
-        }
-
-        h1, h2, h3 { font-family: 'Montserrat', sans-serif; font-weight: 700; }
-
-        /* --- NAVEGACIÓN --- */
-        nav {
-            background: rgba(0, 45, 90, 0.95);
-            backdrop-filter: blur(10px);
-            padding: 1rem 5%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-        }
-
-        .logo { color: var(--white); font-size: 1.4rem; letter-spacing: 1px; }
-        .logo span { color: var(--accent); }
-
-        nav ul { display: flex; list-style: none; }
-        nav ul li { margin-left: 2rem; }
-        nav ul li a {
-            color: var(--white);
-            text-decoration: none;
-            font-size: 0.9rem;
-            text-transform: uppercase;
-            transition: 0.3s;
-        }
-        nav ul li a:hover { color: var(--accent); }
-
-        /* --- HERO SECTION --- */
-        .hero {
-            height: 80vh;
-            background: linear-gradient(135deg, rgba(0,45,90,0.9) 0%, rgba(0,86,179,0.7) 100%), 
-                        url('https://images.unsplash.com/photo-1464851739410-547c15cbed81?auto=format&fit=crop&q=80&w=1500'); 
-            background-size: cover;
-            background-position: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            color: var(--white);
-            padding: 0 10%;
-        }
-
-        .hero h2 { font-size: 3rem; margin-bottom: 1rem; text-shadow: 2px 2px 10px rgba(0,0,0,0.3); }
-        .hero p { font-size: 1.2rem; max-width: 700px; margin-bottom: 2rem; opacity: 0.9; }
-
-        /* --- SECCIONES COMUNES --- */
-        section { padding: 5rem 10%; }
-        .section-title { text-align: center; margin-bottom: 3rem; color: var(--primary); font-size: 2rem; }
-        .section-title::after {
-            content: ''; display: block; width: 60px; height: 4px; background: var(--accent); margin: 10px auto;
-        }
-
-        /* --- REVISTAS (Cards) --- */
-        .grid-revistas {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 2rem;
-        }
-
-        .revista-card {
-            background: var(--white);
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.05);
-            transition: 0.3s;
-            border: 1px solid #eee;
-        }
-
-        .revista-card:hover { transform: translateY(-10px); box-shadow: 0 15px 30px rgba(0,0,0,0.1); }
-        
-        .revista-img { height: 200px; background: var(--primary); display: flex; align-items: center; justify-content: center; color: white; font-size: 4rem; }
-
-        .revista-info { padding: 1.5rem; }
-        .revista-info h3 { margin-bottom: 0.5rem; font-size: 1.2rem; }
-        .btn-descarga {
-            display: inline-block;
-            padding: 0.6rem 1.2rem;
-            background: var(--primary);
-            color: var(--white);
-            text-decoration: none;
-            border-radius: 25px;
-            font-size: 0.8rem;
-            margin-top: 1rem;
-            transition: 0.3s;
-        }
-        .btn-descarga:hover { background: var(--accent); color: var(--primary); font-weight: bold; }
-
-        /* --- FOOTER --- */
-        footer {
-            background: var(--primary);
-            color: var(--white);
-            padding: 3rem 10% 1rem;
-            text-align: center;
-        }
-
-        .social-links { margin: 1.5rem 0; }
-        .social-links a { color: var(--white); font-size: 1.5rem; margin: 0 10px; transition: 0.3s; }
-        .social-links a:hover { color: var(--accent); }
-
-        @media (max-width: 768px) {
-            nav ul { display: none; } /* Simplificación para móvil */
-            .hero h2 { font-size: 2rem; }
-        }
+        :root { --azul: #002D5A; --celeste: #00d4ff; --gris: #f4f7f6; --blanco: #ffffff; }
+        body { font-family: 'Open Sans', sans-serif; margin: 0; background: var(--gris); color: #333; }
+        header { background: var(--azul); color: var(--blanco); padding: 3rem 1rem; text-align: center; border-bottom: 5px solid var(--celeste); }
+        nav { background: var(--blanco); padding: 1rem; text-align: center; position: sticky; top: 0; box-shadow: 0 2px 10px rgba(0,0,0,0.1); z-index: 1000; }
+        nav a { margin: 0 15px; text-decoration: none; color: var(--azul); font-weight: bold; text-transform: uppercase; font-size: 0.9rem; }
+        .hero { background: linear-gradient(rgba(0,45,90,0.8), rgba(0,45,90,0.8)), url('https://www.spwla.org/images/SPWLA/Slider/Slide1.jpg'); background-size: cover; color: white; padding: 5rem 1rem; text-align: center; }
+        .container { max-width: 1000px; margin: 2rem auto; padding: 0 1.5rem; }
+        .seccion { background: var(--blanco); padding: 2rem; border-radius: 12px; margin-bottom: 2rem; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
+        h2 { color: var(--azul); font-family: 'Montserrat', sans-serif; border-left: 5px solid var(--celeste); padding-left: 15px; }
+        .grid-revistas { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin-top: 1.5rem; }
+        .revista { border: 1px solid #eee; padding: 1.5rem; border-radius: 8px; text-align: center; transition: 0.3s; }
+        .revista:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
+        .btn { background: var(--azul); color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; display: inline-block; margin-top: 10px; font-weight: 600; }
+        .btn:hover { background: var(--celeste); color: var(--azul); }
+        footer { background: var(--azul); color: white; text-align: center; padding: 2rem; margin-top: 4rem; }
     </style>
 </head>
 <body>
 
-    <nav>
-        <div class="logo">SPWLA <span>ARGENTINA</span></div>
-        <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#nosotros">Nosotros</a></li>
-            <li><a href="#revistas">Revistas</a></li>
-            <li><a href="#eventos">Eventos</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-        </ul>
-    </nav>
+<header>
+    <h1>SPWLA Argentina</h1>
+    <p>Student Chapter</p>
+</header>
 
-    <section class="hero" id="inicio">
-        <h2>Impulsando la Petrofísica en Argentina</h2>
-        <p>Capítulo estudiantil dedicado a la excelencia en el análisis de perfiles de pozos y evaluación de formaciones.</p>
-        <a href="#revistas" class="btn-descarga" style="padding: 1rem 2rem; font-size: 1rem;">Ver Publicaciones</a>
+<nav>
+    <a href="#inicio">Inicio</a>
+    <a href="#nosotros">Nosotros</a>
+    <a href="#revistas">Revistas</a>
+    <a href="#eventos">Eventos</a>
+</nav>
+
+<section class="hero" id="inicio">
+    <h2>Bienvenidos al Capítulo Estudiantil</h2>
+    <p>Promoviendo la ciencia de la petrofísica y el perfilaje de pozos en Argentina.</p>
+</section>
+
+<div class="container">
+    <section class="seccion" id="nosotros">
+        <h2>Sobre Nosotros</h2>
+        <p>Somos un grupo de estudiantes dedicados a conectar la universidad con la industria energética. Formamos parte de la red global de la <strong>Society of Petrophysicists and Well Log Analysts</strong>.</p>
     </section>
 
-    <section id="nosotros">
-        <h2 class="section-title">Quiénes Somos</h2>
-        <p style="text-align: center; max-width: 800px; margin: 0 auto;">Somos una comunidad académica y profesional formada por estudiantes de ingeniería y geociencias. Buscamos conectar el talento universitario con los desafíos actuales de la industria energética argentina.</p>
-    </section>
-
-    <section id="revistas" style="background: #f0f4f8;">
-        <h2 class="section-title">Revistas Trimestrales</h2>
+    <section class="seccion" id="revistas">
+        <h2>Revistas Trimestrales</h2>
         <div class="grid-revistas">
-            <div class="revista-card">
-                <div class="revista-img">📄</div>
-                <div class="revista-info">
-                    <h3>Edición Mayo 2026</h3>
-                    <p>Análisis de reservorios no convencionales y nuevas tecnologías.</p>
-                    <a href="#" class="btn-descarga">Descargar PDF</a>
-                </div>
+            <div class="revista">
+                <h3>Edición Enero 2026</h3>
+                <p>Resumen de actividades y artículos técnicos.</p>
+                <a href="#" class="btn">Leer Revista</a>
             </div>
-            <div class="revista-card">
-                <div class="revista-img">📄</div>
-                <div class="revista-info">
-                    <h3>Edición Marzo 2026</h3>
-                    <p>Especial: Perfilaje en pozos horizontales.</p>
-                    <a href="#" class="btn-descarga">Descargar PDF</a>
-                </div>
-            </div>
-            <div class="revista-card">
-                <div class="revista-img">📄</div>
-                <div class="revista-info">
-                    <h3>Edición Enero 2026</h3>
-                    <p>Resumen anual de actividades y eventos académicos.</p>
-                    <a href="#" class="btn-descarga">Descargar PDF</a>
-                </div>
+            <div class="revista">
+                <h3>Edición Octubre 2025</h3>
+                <p>Especial: Perfilaje en Vaca Muerta.</p>
+                <a href="#" class="btn">Leer Revista</a>
             </div>
         </div>
     </section>
 
-    <section id="eventos">
-        <h2 class="section-title">Próximos Eventos</h2>
-        <div style="background: white; padding: 2rem; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.05);">
-            <ul style="list-style: none;">
-                <li style="padding: 1rem 0; border-bottom: 1px solid #eee;">
-                    <strong>25 Abr:</strong> Webinar - Introducción a la Interpretación Petro-física básica.
-                </li>
-                <li style="padding: 1rem 0; border-bottom: 1px solid #eee;">
-                    <strong>10 May:</strong> Visita técnica a laboratorios de geología.
-                </li>
-            </ul>
-        </div>
+    <section class="seccion" id="eventos">
+        <h2>Próximos Eventos</h2>
+        <ul>
+            <li><strong>Marzo 2026:</strong> Webinar de Introducción al Perfilaje Eléctrico.</li>
+            <li><strong>Abril 2026:</strong> Reunión mensual del capítulo.</li>
+        </ul>
     </section>
+</div>
 
-    <footer id="contacto">
-        <h3>SPWLA Argentina Student Chapter</h3>
-        <p>Conectando el futuro de la industria.</p>
-        <div class="social-links">
-            <a href="#">LinkedIn</a>
-            <a href="#">Instagram</a>
-            <a href="#">Twitter</a>
-        </div>
-        <p style="font-size: 0.8rem; opacity: 0.7; margin-top: 2rem;">&copy; 2026 SPWLA Argentina - Diseñado para el avance de la ciencia.</p>
-    </footer>
+<footer>
+    <p>&copy; 2026 SPWLA Argentina Student Chapter</p>
+    <p>Contacto: tu-email@ejemplo.com</p>
+</footer>
 
 </body>
 </html>
